--- a/billetterie/index.html
+++ b/billetterie/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Calendrier Billetterie</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link rel="stylesheet" type="text/css" href="./style.css">
-  <script type="text/javascript" src="crypto-js.js"></script>
-  <script type="text/javascript" src="crypto-wrapper.js"></script>
-  <script type="text/javascript" src="calendar-url.js"></script>
-  <script type="text/javascript" src="base.js"></script>
+  <script type="text/javascript" src="./crypto-js.js"></script>
+  <script type="text/javascript" src="./crypto-wrapper.js"></script>
+  <script type="text/javascript" src="./calendar-url.js"></script>
+  <script type="text/javascript" src="./base.js"></script>
   <script type="text/javascript">
     function decryptIdAndGoToCalendar()
     {
