--- a/index.html
+++ b/index.html
@@ -4,7 +4,5 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
-    <!-- page content -->
-  </body>
+  <body></body>
 </html>
